#4 design: 폴더 아이콘 메인홈에 배치

--- a/src/pages/MainHome.css
+++ b/src/pages/MainHome.css
@@ -25,3 +25,16 @@
 .mainHeader .datetime .date {
   margin-right: 20px;
 }
+
+.body {
+  display: flex;
+  padding: 10px 90px;
+}
+
+.info {
+  margin-right: 110px;
+}
+
+.career {
+  margin-right: 110px;
+}
